syntax = "proto3";

package kafka.demo;

import "google/protobuf/timestamp.proto";

// ========== Agent States ==========

// Kafka Producer Agent State
message KafkaProducerState {
    string producer_id = 1;
    int32 messages_published = 2;
    google.protobuf.Timestamp last_publish_time = 3;
    repeated string published_message_ids = 4;
    int64 total_bytes_sent = 5;
}

// Kafka Consumer Agent State
message KafkaConsumerState {
    string consumer_id = 1;
    int32 messages_consumed = 2;
    google.protobuf.Timestamp last_consume_time = 3;
    repeated string consumed_message_ids = 4;
    int64 total_bytes_received = 5;
    string subscription_status = 6;
}

// ========== Event Messages ==========

// Kafka Message Event
message KafkaMessageEvent {
    string message_id = 1;
    string topic = 2;
    string content = 3;
    google.protobuf.Timestamp timestamp = 4;
    string sender_id = 5;
    map<string, string> headers = 6;
}

// Stream Control Event
message StreamControlEvent {
    string action = 1; // "start", "stop", "pause", "resume"
    string target_id = 2;
    google.protobuf.Timestamp timestamp = 3;
}

// Metrics Event
message MetricsEvent {
    string agent_id = 1;
    int32 message_count = 2;
    int64 byte_count = 3;
    double throughput_msgs_per_sec = 4;
    google.protobuf.Timestamp timestamp = 5;
}

